--- a/src/app/cocktail-search/cocktail-search.component.css
+++ b/src/app/cocktail-search/cocktail-search.component.css
@@ -1,8 +1,9 @@
 .container {
     width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    min-height: 100%;
+    bottom: 0;
     padding: 20px;
+    padding-bottom: 20px;
     background-image: url('https://assets.gqindia.com/photos/609a8e5b2c7bfc93e2031ba2/16:9/w_1920,c_limit/World%20Cocktail%20Day.jpeg'); 
     background-size: cover; 
     background-position: center;
@@ -14,7 +15,7 @@
   .title {
     color: #fff;
     font-family: 'freight-big-pro';
-    font-size: 201px;
+    font-size: 180px;
     font-weight: normal;
     letter-spacing: -6.5px;
     overflow-wrap: break-world;
@@ -66,7 +67,7 @@
   }
   
   .cocktail-details {      
-    width:fit-content;     
+    max-width: 100%-200px;     
     margin-top: 20px auto;
     padding: 10px;
     font-family: Arial, sans-serif; 
